storage-system/storage-system/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mercy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls: 
  - hosts:
  rules:
    http:
      paths:
      - path: /
        backend:
          serviceName: storage-systems-ui
          servicePort: 30004
      - path: /api/?(.*)
        backend:
          serviceName: express-app
    servicePort: 8081
